--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A framework for handling annotations for data visualization.",
   "keywords": ["annotation", "data visualization"],
   "directories": {},
+  "main": "annotation.js",
+  "files": [
+    "annotation.js",
+    "annotation.js.map"
+  ],
   "devDependencies": {
     "babel-plugin-external-helpers": "6.18.0",
     "babel-preset-es2015": "6.18.0",
@@ -14,11 +19,10 @@
     "typescript": "2.0.8"
   },
   "scripts": {
-    "start": "npm run server & npm run watch",
-    "server": "http-server",
+    "start": "npm run watch",
     "build": "rollup -c",
     "watch": "npm-watch",
-    "typescript": "tsc",
+    "typescript": "tsc --outdir src/js",
     "prepublish": "npm run build"
   },
   "author": {
@@ -26,8 +30,8 @@
     "url": "http://www.susielu.com"
   },
   "watch": {
-    "build": "src/**/*.js",
-    "typescript": "src/**/*.ts"
+    "build": "src/js/*.js",
+    "typescript": "src/*.ts"
   },
   "repository": {
     "type": "git",
