--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "viz-annotation",
   "version": "0.0.0",
-  "description": "A framework for handling annotations for data visualization.",
-  "keywords": ["annotation", "data visualization"],
+  "description": "Shared drawing logic for handling annotations for data visualization.",
+  "keywords": [
+    "annotation",
+    "data visualization"
+  ],
   "directories": {},
-  "main": "annotation.js",
+  "main": "lib/index.js",
   "files": [
     "annotation.js",
     "annotation.js.map"
   ],
   "devDependencies": {
+    "babel-cli": "6.24.1",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-external-helpers": "6.18.0",
     "babel-preset-es2015": "6.18.0",
-    "babelrc-rollup": "3.0.0",
-    "npm-watch": "0.1.6",
-    "rollup": "0.34.7",
-    "rollup-plugin-babel": "2.6.1"
+    "eslint": "3.8.1",
+    "npm-watch": "0.1.6"
   },
   "scripts": {
     "start": "npm run watch",
-    "build": "rollup -c",
+    "build": "babel src -d lib",
     "watch": "npm-watch",
     "prepublish": "npm run build"
   },
@@ -38,5 +41,10 @@
   "bugs": {
     "url": "https://github.com/susielu/viz-annotation/issues"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
