--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "viz-annotation",
-  "version": "0.0.1-0",
-  "description":
-    "Shared drawing logic for handling annotations for data visualization.",
-  "keywords": ["annotation", "data visualization"],
-  "files": ["lib"],
+  "version": "0.0.1-1",
+  "description": "Shared drawing logic for handling annotations for data visualization.",
+  "keywords": [
+    "annotation",
+    "data visualization"
+  ],
+  "files": [
+    "lib"
+  ],
   "main": "lib/index.js",
   "devDependencies": {
     "babel-cli": "6.24.1",
@@ -37,6 +41,8 @@
   },
   "dependencies": {},
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
