fix d3-shap dependencies

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "viz-annotation",
   "version": "0.0.1-4",
-  "description":
-    "Shared drawing logic for handling annotations for data visualization.",
-  "keywords": ["annotation", "data visualization"],
-  "files": ["lib"],
+  "description": "Shared drawing logic for handling annotations for data visualization.",
+  "keywords": [
+    "annotation",
+    "data visualization"
+  ],
+  "files": [
+    "lib"
+  ],
   "main": "lib/index.js",
   "devDependencies": {
     "babel-cli": "6.24.1",
@@ -15,8 +19,8 @@
     "npm-watch": "0.1.6",
     "webpack": "3.8.1"
   },
-  "dependencies": {
-    "d3-shape": "1.0.4"
+  "peerDepend": {
+    "d3-shape": "^1.0.4"
   },
   "scripts": {
     "start": "npm run watch",
@@ -40,6 +44,8 @@
     "url": "https://github.com/susielu/viz-annotation/issues"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
