--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-cli": "6.24.1",
     "babel-eslint": "^8.0.1",
     "babel-plugin-external-helpers": "6.18.0",
+    "babel-plugin-transform-es2015-spread": "6.22.0",
     "babel-preset-es2015": "6.18.0",
     "eslint": "3.8.1",
     "npm-watch": "0.1.6",
@@ -46,6 +47,9 @@
   "babel": {
     "presets": [
       "es2015"
+    ],
+    "plugins": [
+      "transform-es2015-spread"
     ]
   }
 }
